Grober Abriss fertig, Aufgabe 1 fehlt

--- a/Klausur Gedächtnisprotokoll So15.tex
+++ b/Klausur Gedächtnisprotokoll So15.tex
@@ -20,7 +20,80 @@ Dieser Text ist unter dieser \href{http://creativecommons.org/licenses/by-nc-sa/
 
 
 
-\section{Aufgabe 2}
+\section{Aufgabe 2 - Sphärische Abberation}
+
+\subsection*{a}
+
+Was ist die Ursache der shärischen Abberation?
+
+\subsection*{b)}
+
+?
+
+\subsection*{c)}
+
+Zeichnen sie den Strahlenverlauf durch eine Linse unter Berücksichtigung der sphärischen Abberation.
+
+\subsection*{d)}
+
+Was ist die älteste Methode um die sphärische Abberation zu korrigieren und was ist ihr Nachteil?
+
+\subsection*{e)}
+
+Gibt es heute bessere Methoden?
+
+
+\section{Aufgabe 3 - Brechung}
+
+Man hat ein \textbf{gleichseitiges} Glasdreieck, das von einem Lichtstrahl symetrisch durchlaufen wird. $n_{Glas} = 1,6$ und $n_{Luft} = 1$. Der Lichtstrahl fällt parallel zur Grundseite ein.
+
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5]{A3_1.jpg}
+	\caption{Skizze}
+\end{figure}
+
+\subsection*{a)}
+
+Kommt es zur Totalreflexion, wenn sich an Punkt A Luft befindet?
+
+\subsection*{b)}
+
+Kommt es zur Totalreflexion, wenn sich an Punkt A Wasser ($n_{Wasser} = 1,334$) befindet?
+
+\newpage
+
+\section{Aufgabe 4 - Sterne und Teleskope}
+
+
+Ein Stern hat den Durchmesser $\unit[2,38 \cdot 10^6]{km}$ und Abstand $\unit[8,6]{Lj}$.
+
+
+\subsection*{a)}
+
+Die Sterne nahe der Sonne haben alle die gleiche Größe, aber unterschiedliche Helligkeiten. Woran liegt das?
+
+
+\subsection*{b)}
+
+Du hast ein Teleskop dessen Linse eine Brennweite $\unit[25]{m}$ beträgt. Berechne die Bildgröße des Sterns.
+
+
+\subsection*{c)}
+
+??
+
+\section{Aufgabe 5 - Besselversuch}
+
+Alles zum Besselversuch. Aufbau, Funktion, Methode, Berechnung der Brennweite der vermessenen Linse.
+
+
+
+
+
+
+
 
 
 
