Aufgabe 1 komplett Aufgabe 4 komplett
online gestellt

--- a/Klausur Gedächtnisprotokoll So15.tex
+++ b/Klausur Gedächtnisprotokoll So15.tex
@@ -16,13 +16,16 @@ Dieser Text ist unter dieser \href{http://creativecommons.org/licenses/by-nc-sa/
 
 
 
-\section{Aufgabe 1}
+\section{Aufgabe 1 - Astronomie}
 
-
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.6]{A1_1.jpg}
+\end{figure}
 
 \section{Aufgabe 2 - Sphärische Abberation}
 
-\subsection*{a}
+\subsection*{a)}
 
 Was ist die Ursache der shärischen Abberation?
 
@@ -82,7 +85,10 @@ Du hast ein Teleskop dessen Linse eine Brennweite $\unit[25]{m}$ beträgt. Berec
 
 \subsection*{c)}
 
-??
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.5]{A4_1.jpg}
+\end{figure}
 
 \section{Aufgabe 5 - Besselversuch}
 
